test/pass/closures/close_func_param.lily
define f(a: Integer) :
    Tuple[Function(), Function( => Integer)] {

    define g { a += 1 }
    define h : Integer { return a }
    return <[g, h]>
}

var v = f(10)
var increment = v[0]
var ret = v[1]

increment()
increment()
if ret() != 12:
    stderr.print("Failed.")
